<resources>
    <string name="app_name">MyGVP</string>
    <string name="login">Login</string>
    <string name="student_login">Student Login</string>
    <string name="admin_login">Admin Login</string>
    <string name="faculty_login">Faculty Login</string>
    <string name="college_logo">College Logo</string>
    <string name="collage_name">GVPCDPGC</string>
    <string name="forget_password">Forget Password?</string>
    <string name="attendance">Attendance</string>
    <string name="results">Results</string>
    <string name="achievement">Achievements</string>
    <string name="lost_and_found">Lost &amp; Found</string>
    <string name="sports">Sports</string>
    <string name="payment">Fee Details</string>
    <string name="upload">Upload</string>
    <string name="view">View</string>

    <!--    <string name="password">Password</string>-->
    <string-array name="years">
        <item>1st Year</item>
        <item>2nd Year</item>
        <item>3rd Year</item>
        <item>4th Year</item>
    </string-array>

    <string-array name="semesters">
        <item>Semester 1</item>
        <item>Semester 2</item>
    </string-array>
</resources>