<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- College Logo -->
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/gvplogo"
        android:contentDescription="@string/college_logo"
        android:layout_marginBottom="16dp" />

    <!-- College Name -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collage_name"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="24dp" />

    <!-- Admin Login -->
    <Button
        android:id="@+id/btnAdmin"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/admin_login"
        android:backgroundTint="@color/lavender"
        android:textColor="@color/black"
        android:radius="16dp"/>
    <!-- Faculty Login -->
    <Button
        android:id="@+id/btnFaculty"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/faculty_login"
        android:backgroundTint="@color/lavender"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:radius="16dp"/>
    <!-- Student Login -->
    <Button
        android:id="@+id/btnStudent"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/student_login"
        android:backgroundTint="@color/lavender"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:radius="16dp"/>

</LinearLayout>
