<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Logo -->
    <ImageView
        android:src="@drawable/gvplogo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginBottom="18dp"
        android:contentDescription="@string/college_logo" />

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faculty_login"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#2E2E2E"
        android:layout_marginBottom="22dp" />

    <!--Email-->

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Faculty Email"
        android:inputType="textEmailAddress"/>
<!--password-->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"/>

    <!-- Forgot Password -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textSize="14sp"
        android:textColor="#8D7CA9"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/lavender"
        android:radius="16dp"/>
</LinearLayout>
