<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <!-- Logo -->
    <ImageView
        android:src="@drawable/gvplogo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginBottom="18dp"
        android:contentDescription="@string/college_logo" />

    <!-- Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_login"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#2E2E2E"
        android:layout_marginBottom="22dp" />

    <!-- Email -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="Enter your email"
        android:inputType="textEmailAddress"
        android:background="@drawable/bg_gray_input"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#7A7A7A"
        android:layout_marginBottom="12dp" />

    <!-- Password -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:background="@drawable/bg_gray_input"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#7A7A7A"
        android:layout_marginBottom="18dp" />

    <!-- Forgot Password -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textSize="14sp"
        android:textColor="#7E57C2"
        android:layout_marginBottom="20dp" />

    <!-- Login Button -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:backgroundTint="@color/lavender"
        android:radius="16dp"/>

</LinearLayout>
